@@ -11,3 +11,4 @@
 2015/06/25 - 1.4   - Fenix - geolocation plugin is now a requirement
                            - added strong dependency with B3 v1.10.1
 2015/06/26 - 1.5   - Fenix - better compatibility with geolocation plugin and B3 v1.10.1 core
+2015/06/27 - 1.5.1 - Fenix - catch a more broader exception while connecting to winmxunlimited api service
